Fixed spacing between about paragraph and list

--- a/src/styles/Night/More.module.css
+++ b/src/styles/Night/More.module.css
@@ -302,6 +302,12 @@
     margin: 0 3% 3% 0;
 }
 
+@media only screen and (min-width: 1000px) {
+    .about {
+        margin: 0 3% 1% 0;
+    }
+}
+
 .current {
     margin: 0 3% 5% 10%;
 }
